# personal-finance-dashboard

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  start.sh
backend/: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0d11acde8703_remove_currency_field_from_transactions.py  a22655edf37d_remove_total_amount_column_from_.py  a66cac8ff7c4_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  currencies.py  health.py  pensions.py  portfolios.py  settings.py  stocks.py  transactions.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  rate_limiting.py  security.py
backend/app/models/: __init__.py  market_data.py  pension.py  portfolio.py  settings.py  user.py
backend/app/schemas/: auth.py  currency.py  pension.py  portfolio.py  settings.py  stocks.py  user.py
backend/app/services/: cache_service.py  currency.py  pension.py  portfolio.py  settings.py  transaction.py  user.py  yfinance_service.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_auth.py  test_auth_simple.py  test_health.py  test_transactions.py
docs/: back-end-architecture.md  front-end-architecture.md  front-end-spec.md  milestone-2-user-stories.md  milestone-plan.md  prd.md  project-brief.md  story-template.md
